payment stat: solved issue with content overflow. The header is NOT fixed yet.

--- a/client/app/ctrl-panel/esekPayment.less
+++ b/client/app/ctrl-panel/esekPayment.less
@@ -14,6 +14,8 @@
 }
 
 #esek-payment-stat-table {
-  flex: 1;
+  flex: 1 1 500px;
+  overflow: auto;
+
   background: orange;
 }
